--- a/setup.cfg
+++ b/setup.cfg
@@ -14,7 +14,7 @@ python_requires = >=3.7
 include_package_data = True
 packages = find:
 install_requires =
-    aiohttp>=3.7
+    aiohttp >=3.7, <=3.8.3
 
 [flake8]
 max-line-length = 88
