--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -18,6 +18,10 @@ repos:
     - python
     - markdown
     - rst
+- repo: https://github.com/psf/black
+  rev: 22.12.0
+  hooks:
+  - id: black
 - repo: https://github.com/PyCQA/flake8
   rev: 4.0.1
   hooks:
@@ -42,22 +46,22 @@ repos:
   - id: file-contents-sorter
     files: |
       .gitignore
-# - repo: https://github.com/rhysd/actionlint
-#   rev: v1.6.15
-#   hooks:
-#   - id: actionlint-docker
-#     args:
-#     - -ignore
-#     - 'SC2155:'
-#     - -ignore
-#     - 'SC2086:'
-#     - -ignore
-#     - 'SC1004:'
-# - repo: https://github.com/sirosen/check-jsonschema
-#   rev: 0.17.1
-#   hooks:
-#   - id: check-github-actions
-# ci:
-#   skip:
-#   - actionlint-docker
-#   - check-github-actions
+- repo: https://github.com/rhysd/actionlint
+  rev: v1.6.15
+  hooks:
+  - id: actionlint-docker
+    args:
+    - -ignore
+    - 'SC2155:'
+    - -ignore
+    - 'SC2086:'
+    - -ignore
+    - 'SC1004:'
+- repo: https://github.com/sirosen/check-jsonschema
+  rev: 0.17.1
+  hooks:
+  - id: check-github-actions
+ci:
+  skip:
+  - actionlint-docker
+  - check-github-actions
