--- a/setup.cfg
+++ b/setup.cfg
@@ -16,6 +16,15 @@ packages = find:
 install_requires =
     aiohttp >=3.7, <=3.8.3
 
+[options.extras_require]
+dev =
+    mypy==0.982
+    pre-commit==2.20.0
+    pytest==7.2.0
+    pytest-cov==4.0.0
+    pytest-asyncio==0.20.1
+    types-PyYAML
+
 [flake8]
 max-line-length = 88
 ignore = N801,N802,N803,E252,W503,E133,E203,F541
@@ -23,23 +32,24 @@ ignore = N801,N802,N803,E252,W503,E133,E203,F541
 [isort]
 profile=black
 sections=FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,TESTS,LOCALFOLDER
-known_first_party=neuro_config_client
+known_first_party=youscan_ir_client
 known_tests=tests
 combine_as_imports=true
 
 [tool:pytest]
 testpaths = tests
+asyncio_mode = auto
 filterwarnings =
     error
     ignore::DeprecationWarning:pytest_asyncio
 addopts =
-    --cov=neuro_config_client
+    --cov=youscan_ir_client
     --cov-report=term
     --cov-report=xml:.coverage.xml
 
 [coverage:run]
 branch = True
-source = platform_config_client
+source = youscan_ir_client
 
 [mypy]
 check_untyped_defs = True
