--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -12,11 +12,11 @@ on:
 jobs:
   test:
     name: Run client tests
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
     strategy:
       matrix:
         py_version: ['3.7', '3.8', '3.9', '3.10']
-        os: [ubuntu, macos, windows]
+        os: [ubuntu-latest, macos-latest, windows-latest]
     steps:
     - name: Checkout commit
       uses: actions/checkout@v2
