fix package description

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = youscan-ir-client
-url = https://tbd
+url = github.com/yevheniiSemendiak/youscan_ir_client
 long_description = file: README.md
 long_description_content_type = text/markdown
 license = Apache 2
